modus.css
body {
  padding-bottom: 20px;
}

.navbar {
  margin-bottom: 20px;
}

.modus-logo-img {
    width: 120px;
}

.navbar-brand {
    display: inline-block;
    vertical-align: middle;
}

.modus-title {
    margin-top: 0.5em;
}

.modus-bg {
  background-color: #8ec5fc25;
  background-image: linear-gradient(62deg, #8EC5FC25 0%, #E0C3FC25 100%);
}

/* MARKETING CONTENT
-------------------------------------------------- */

.marketing .col-lg-4 {
  margin: 1rem;
}

/* Featurettes
------------------------- */

.featurette-divider {
  margin: 1rem 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  margin: 2rem 0; /* Space out the Bootstrap <hr> more */

  font-weight: 300;
  line-height: 1;
  /* rtl:remove */
  letter-spacing: -.05rem;
}

